--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "axios": "^1.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0"
   },
@@ -37,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.3.4"
   }
 }
